--- a/维护指南.md
+++ b/维护指南.md
@@ -23,4 +23,4 @@ _pages/：**每一页的内容**，目前包括：
 - **更新方法**：更改对应文件，Preview查看大体效果，commit，等待几分钟网页更新，刷新网页并检查效果
 - _pages/内.md文件必须包含特定开头格式才内被识别并加载进网页
 - 表格、图片等内容需要前后空行才能识别（与一般markdown不完全相同）
-- 如上一点所说，尽管网页内容编辑以markdown进行并（基本）遵循markdown语法，但网页解析与markdown解析不完全相同，网页渲染效果与Preview效果也不一定一致，**任何修改都必须在实际网页查看效果确认**
+- 如上一点所说，尽管网页内容编辑以markdown进行并（基本）遵循markdown语法，但网页解析与markdown解析不完全相同，网页渲染效果与Preview效果也不一定一致，**任何修改都必须在实际网页查看效果确认**，相关网页的维护信息可以参考对应.md的注释
