--- a/维护指南.md
+++ b/维护指南.md
@@ -2,7 +2,7 @@
 
 _config.yml：主要维护网页**左侧团队信息栏**，详见文件内注释
 
-_data/navigation.yml：网页**上方导航栏**，每一项包括title（显示在网页上）和url（网页后缀），按需增减，增加新项目需要_pages/里有相应网页内容文件
+_data/navigation.yml：网页**上方导航栏**，每一项包括title（显示在网页上）和url（网页后缀），按需增减，增加新项目需要_pages/里有相应网页内容文件，且该文件有特定开头，url应与开头内的permalink对应
 
 images/：放图片
 
