--- a/维护指南.md
+++ b/维护指南.md
@@ -1,18 +1,18 @@
 # 维护主页主要需要关注的文件及目录：
 
-_config.yml：主要维护网页**左侧团队信息栏**，详见文件内注释
+[_config.yml](_config.yml)：主要维护网页**左侧团队信息栏**，详见文件内注释
 
-_data/navigation.yml：网页**上方导航栏**，每一项包括title（显示在网页上）和url（网页后缀），按需增减，增加新项目需要_pages/里有相应网页内容文件，且该文件有特定开头，url应与开头内的permalink对应
+[_data/navigation.yml](_data/navigation.yml)：网页**上方导航栏**，每一项包括title（显示在网页上）和url（网页后缀），按需增减，增加新项目需要_pages/里有相应网页内容文件，且该文件有特定开头，url应与开头内的permalink对应
 
-images/：放图片
+[images/](images/)：放图片
 
-_pages/：**每一页的内容**，目前包括：
+[_pages/](_pages/)：**每一页的内容**，目前包括：
 
-- about.md：主页的主页，包括团队主要信息介绍，以及[访问地区统计](https://s11.flagcounter.com/more/ushX/)。
-- members.md：介绍团队成员；
-- publications.md：已有的工作论文；
-- activities.md：举办、参与的活动，比如境内外学术交流、举办讲座等；
-- repositories.md：一些重要的github库
+- [about.md](_pages/about.md)：主页的主页，包括团队主要信息介绍，以及[访问地区统计](https://s11.flagcounter.com/more/ushX/)。
+- [members.md](_pages/members.md)：介绍团队成员；
+- [publications.md](_pages/publications.md)：已有的工作论文；
+- [activities.md](_pages/activities.md)：举办、参与的活动，比如境内外学术交流、举办讲座等；
+- [repositories.md](_pages/repositories.md)：一些重要的github库
 
 内容页编写需要遵循格式（主要是文件开头的关联信息，详见about.md内注释）
 
